# bevycube

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  Trunk.toml  index.html
assets/: WhiteBearCrabRealRound.ktx2
media_in/: WhiteBearCrabRealRoundEfface256.ktx2  WhiteBearCrabRealRoundEfface512.ktx2  menu_coords.txt  menus.odt  notes.txt  settings.odt
src/: camera.rs  constants.rs  lib.rs  main.rs  roundel.rs  ui.rs  world.rs
src/ui/: about_ui.rs  diamonds.rs  instruct_ui.rs  instructions_ui.rs  main_ui.rs  mod.rs  ocean_ui.rs  overlay_ui.rs  roundel_ui.rs  show_ui.rs
src/world/: camera.rs  cube.rs  disk.rs  ground.rs  lights.rs  ocean.rs
